examples/test/testpolicy4428.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4428
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key18: value4
      key38: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value43
      podSelector:
        matchLabels:
          key12: value41
          key18: value49
          key46: value25
